# HR_System

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.yml  fly.toml  package-lock.json  package.json  playwright.config.js  playwright.config.ts
backend/: Cargo.toml  hr_system.db
backend/src/: auth.rs  cors.rs  db.rs  email.rs  error.rs  events.rs  feature_flags.rs  handlers.rs  json_schemas.rs  lib.rs  main.rs  models.rs  pagination.rs  routes.rs  sentry_init.rs
backend/src/auth/: mod.rs
backend/src/db/: audit.rs  auth_sessions.rs  bootstrap.rs  candidates.rs  complaints.rs  complaints_query.rs  employees.rs  expansion_migrations.rs  expansion_schema.rs  feature_flags.rs  fts.rs  migration_registry.rs  mod.rs  onboarding.rs  ordering.rs  organization.rs  paths.rs  rbac.rs  schema.rs  schema_fragments.rs  stats.rs  surveys.rs  tests.rs  tickets.rs  utils.rs
backend/src/handlers/: activity.rs  admin_payload_crud.rs  audit.rs  auth_handlers.rs  bulk.rs  candidates.rs  case_comments.rs  complaints.rs  complaints_helpers.rs  crud_helpers.rs  crud_route_support.rs  dashboard.rs  db_errors.rs  departments.rs  development_feedback.rs  development_goals.rs  development_meetings.rs  docs.rs  documents.rs  employees.rs  enterprise.rs  enterprise_imports_reports.rs  enterprise_shifts.rs  enterprise_utils.rs  export.rs  feature_flags.rs  health.rs  json_payload.rs  mod.rs  notifications.rs  notifications_email.rs  notifications_extra.rs  onboarding_tasks.rs  openapi.rs  openapi_paths.rs  openapi_schemas.rs  org_chart.rs  payload_route_support.rs  platform.rs  positions.rs  (+10 more)
backend/src/middleware/: mod.rs  rate_limit.rs  rate_limit_tests.rs  security.rs  service_utils.rs  v2_contract.rs  v2_contract_tests.rs
backend/tests/: api_contracts.rs  api_error_contracts.rs  api_smoke.rs  bulk_contracts.rs  complaints_contracts.rs  enterprise_contracts.rs  expansion_contracts.rs  profile_contracts.rs  search_contracts.rs
(+426 files in other folders)
