[package]
name = "hr_system_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["cookie"] }
http = "1.3.1"
regex = "1.12.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
